# Ganeumteo

./: .env.example  .gitignore  BUILD_PLAN.md  CC_PATTERNS_ROADMAP.md  GMS_CONTEXT_LIMIT_FINDINGS.md  README.md  __init__.py  _parallel_loop.py  agent.py  graph.py  pyproject.toml  state.py  tools.py  trace.py  wf_proto_qa.js  wf_proto_qa2.js
agent/: agent.py  graph.py  run.py  state.py  tools.py
backend/: __init__.py  app.py  labels.py  proto_bridge.py  sse.py  state_init.py
frontend/: app.js  card.js  chat.js  colors_and_type.css  index.html  nav_app.css  terms.js  theme.css  trace.js  verdict.js
infra/: __init__.py  build_ordinance_index.py  db.py  docker-compose.yml  embed.py  ordin_rag.py  schema.sql
lawlib/: law_fetch.py  wf_docs_agent.py  wf_e2e_live.py  wf_procedure_agent.py  wf_reg_agent.py  wf_roadmap.py
qa/: run_qa.py  showcase_real.py  test_act_parser.py  test_boundary.py  test_contracts.py  test_docs_live_matrix.py  test_frontend.mjs  test_golden.py  test_procedure_frame.py  test_workflow_live_matrix.py
qa/fixtures/: REAL_yangpyeong_cafe.json  REAL_yangpyeong_natural.json  REAL_yangpyeong_resid.json  act_DTarLandUse_UQA001.json  act_DTarLandUse_UQA111.json  chuncheon_near.json  nonexistent_abstain.json  yangpyeong_cafe.json  yangpyeong_office_big.json
