[project]
name = "react-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "olefile>=0.47",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
